Style fix list expand/collapse toggle

--- a/crypto-app/src/components/Coin/coin.css
+++ b/crypto-app/src/components/Coin/coin.css
@@ -5,15 +5,8 @@
 
 #expansionHint {
   margin-right: 16px;
-  padding: 4px;
-  border-radius: 4px;
   color: rgb(106, 113, 160);
-  background: rgb(247, 247, 247);
-}
-
-#expansionHint:hover {
-  color: white;
-  background: rgb(201, 201, 201);
+  user-select: none;
 }
 
 .coinIcon {
