--- a/crypto-app/src/components/CoinList/coinlist.css
+++ b/crypto-app/src/components/CoinList/coinlist.css
@@ -1,13 +1,13 @@
 #coinList {
   text-align: left;
   list-style-type: none;
-  border-bottom: 5px solid purple;
+  border-bottom: 4px solid rgb(175, 149, 0);
 }
 
 .coinListItem {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
   border: 1px solid rgb(236, 236, 236);
 }
 
